<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8.dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/novo_compromiso"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="center"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/btnData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data" />

        <Space
            android:layout_width="160dp"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hora" />
    </LinearLayout>

    <EditText
        android:id="@+id/descricaoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descri_o"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:layout_marginBottom="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>